--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page title</title>
+    <title>flix-clone</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer ></script>
 </head>
